Added name() function to Plan class for clarity.

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -118,7 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan = arp.Plan(YOB=[1961], expectancy=[93])"
+    "plan = arp.Plan(YOB=[1961], expectancy=[93])\n",
+    "plan.setName('Bengen 4%')"
    ]
   },
   {
@@ -457,7 +458,7 @@
    "id": "ae05b3e9-3d36-4254-bd70-6d3db25f5a54",
    "metadata": {},
    "source": [
-    "Recall that we set the rates above to mimic those from and after 1966. For this purpose, we only need to run a single realization looking at what would happen if Sam had retired in 1966. So let's run this plan: The following call runs all the required calculations for the time horizon over Sam's life expectancies. `run()` returns many variables that we assign to the `_` variable, used to store the answer to the last command in Python. Just a trick to avoid printing all these numbers on screen. Having set the variable to verbose, `run()` will report what happens during each year modeled."
+    "Recall that we set the rates above to mimic those from and after 1966. For this purpose, we only need to run a single realization looking at what would happen if Sam had retired in 1966. So let's run this plan: The following call runs all the required calculations for the time horizon over Sam's life expectancies. Having set the variable to verbose, `run()` will report what happens during each year modeled."
    ]
   },
   {
@@ -467,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plan.run()"
+    "plan.run()"
    ]
   },
   {
