--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -123,7 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan = arp.Plan(YOB=[1962, 1965], expectancy=[89, 92])"
+    "plan = arp.Plan(YOB=[1962, 1965], expectancy=[89, 92])\n",
+    "plan.setName('jack & jill')"
    ]
   },
   {
@@ -516,7 +517,7 @@
    "id": "ae05b3e9-3d36-4254-bd70-6d3db25f5a54",
    "metadata": {},
    "source": [
-    "Recall that we set the rates above to mimic those from and after 1969. For this purpose, we only need to run a single realization looking at what would happen if Jack and Jill had retired in 1969. So let's run this plan: The following function call runs all the required calculations for the time horizon over Jack and Jill's life expectancies. `run()` returns many variables that we assign to the `_` variable, used to store the answer to the last command in Python. Just a trick to avoid printing all these numbers on screen. Having set the variable to verbose, `run()` will report what happens during each year modeled."
+    "Recall that we set the rates above to mimic those from and after 1969. For this purpose, we only need to run a single realization looking at what would happen if Jack and Jill had retired in 1969. So let's run this plan: The following function call runs all the required calculations for the time horizon over Jack and Jill's life expectancy. Having set the variable to verbose, `run()` will report what happens during each year modeled."
    ]
   },
   {
@@ -526,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plan.run()"
+    "plan.run()"
    ]
   },
   {
@@ -834,7 +835,7 @@
    "source": [
     "The Excel file named *instance_plan2.xlsx* saved will contain all the information for the heuristically optimized plan. Take a few minutes to open this file and explore the different tabs.\n",
     "\n",
-    "In this case, Roth conversions increased estate by $241k without compromising the desired income. The difference lies in RMDs that push the gross income into higher bracket, and the fact that the tax-free account had a different assets allocation. At this point, both plans can be compared using these lines of code:"
+    "In this case, Roth conversions increased estate by $234k without compromising the desired income. The difference lies in RMDs that push the gross income into higher bracket, and the fact that the tax-free account had a different assets allocation. At this point, both plans can be compared using these lines of code:"
    ]
   },
   {
@@ -844,12 +845,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showNetIncome()\n",
-    "plan2.showNetIncome()\n",
-    "plan.showSources()\n",
-    "plan2.showSources()\n",
-    "plan.showAccounts()\n",
-    "plan2.showAccounts()"
+    "plan.showNetIncome('no conversions')\n",
+    "plan2.showNetIncome('conversions')\n",
+    "plan.showSources('no conversions')\n",
+    "plan2.showSources('conversions')\n",
+    "plan.showAccounts('no conversions')\n",
+    "plan2.showAccounts('conversions')"
    ]
   },
   {
