--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -289,6 +289,8 @@
     "                taxFree=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
     "\n",
     "plan1.interpolateAR(myMethod)\n",
+    "plan1.setName('M&J uncoordinated')\n",
+    "\n",
     "plan1.showAllocations()"
    ]
   },
@@ -314,6 +316,8 @@
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
     "plan2.interpolateAR(myMethod)\n",
+    "plan2.setName('M&J indiv. coordinated')\n",
+    "\n",
     "plan2.showAllocations()"
    ]
   },
@@ -340,6 +344,8 @@
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
     "plan3.interpolateAR(myMethod)\n",
+    "plan3.setName('M&J fully coordinated')\n",
+    "\n",
     "plan3.showAllocations()"
    ]
   },
@@ -360,9 +366,9 @@
    "outputs": [],
    "source": [
     "arp.setVerbose(False)\n",
-    "plan1.run();\n",
-    "plan2.run();\n",
-    "plan3.run();"
+    "plans = [plan1, plan2, plan3]\n",
+    "for plan in plans:\n",
+    "    plan.run()"
    ]
   },
   {
@@ -379,7 +385,7 @@
    "metadata": {},
    "source": [
     "### Compare some of the relevant info over the years\n",
-    "We use a dictionary to attach a string to each plan and be able to label the graphs for more clarity."
+    "We use a list to plot values from each plan."
    ]
   },
   {
@@ -389,15 +395,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dic = {plan1: 'plan1', plan2: 'plan2', plan3: 'plan3'}\n",
-    "for plan in dic:\n",
-    "    plan.showNetIncome(dic[plan]);\n",
     "\n",
-    "for plan in dic:\n",
-    "    plan.showSources(dic[plan]);\n",
+    "for plan in plans:\n",
+    "    plan.showNetIncome();\n",
     "\n",
-    "for plan in dic:\n",
-    "    plan.showAccounts(dic[plan]);\n"
+    "for plan in plans:\n",
+    "    plan.showSources();\n",
+    "\n",
+    "for plan in plans:\n",
+    "    plan.showAccounts();\n"
    ]
   },
   {
@@ -407,11 +413,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for plan in dic:\n",
-    "    plan.showGrossIncome(dic[plan]);\n",
+    "for plan in plans:\n",
+    "    plan.showGrossIncome();\n",
     "\n",
-    "for plan in dic:\n",
-    "    plan.showTaxes(dic[plan]);\n",
+    "for plan in plans:\n",
+    "    plan.showTaxes();\n",
     "  "
    ]
   },
@@ -422,9 +428,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for plan in dic:\n",
+    "for plan in plans:\n",
     "    plan.estate(25)\n",
-    "    plan.showAssetDistribution(dic[plan])\n",
+    "    plan.showAssetDistribution()\n",
     "  "
    ]
   },
