--- a/roth.ipynb
+++ b/roth.ipynb
@@ -108,7 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan = arp.Plan(YOB=[1964, 1966], expectancy=[87, 84])"
+    "plan = arp.Plan(YOB=[1964, 1966], expectancy=[87, 84])\n",
+    "plan.setName('Roth example')"
    ]
   },
   {
@@ -276,7 +277,7 @@
     "\n",
     "In particular, is there a preferable sequence of conversions when markets are fluctuating? To answer this question, we will use two cases. One with fixed rate of returns, and another with the sequence of historical rates that happened from 1969 and the years after. Are there signs in the market that can indicate preferable times to make a Roth conversion?\n",
     "\n",
-    "We start by making clones of the plan we have designed so far, and select different kind of rates. One has fixed, conservative rates, while the other has historical and realistic annual rates of returns."
+    "We start by making clones of the plan we have designed so far, and select different kind of rates. One has fixed, conservative rates, while the other has historical and realistic annual rates of returns. We will give each new plan a new name to distinguish their output."
    ]
   },
   {
@@ -288,9 +289,11 @@
    "source": [
     "plan_fixed = arp.clone(plan)\n",
     "plan_fixed.setRates('conservative')\n",
+    "plan_fixed.setName('fixed conservative')\n",
     "\n",
     "plan_hist = arp.clone(plan)           \n",
-    "plan_hist.setRates('historical', 1969)"
+    "plan_hist.setRates('historical', 1969)\n",
+    "plan_hist.setName('historical 1969')"
    ]
   },
   {
@@ -377,19 +380,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_fixed.showSources('fixed')\n",
-    "plan_fixed2.showSources('fixed+conversions')\n",
+    "plan_fixed.showSources('no conversions')\n",
+    "plan_fixed2.showSources('conversions')\n",
     "\n",
-    "plan_fixed.showRates('fixed')\n",
+    "plan_fixed.showRates('')\n",
     "\n",
-    "plan_fixed.showAccounts('fixed')\n",
-    "plan_fixed2.showAccounts('fixed+conversions')\n",
+    "plan_fixed.showAccounts('no conversions')\n",
+    "plan_fixed2.showAccounts('conversions')\n",
     "\n",
-    "plan_fixed.showGrossIncome('fixed')\n",
-    "plan_fixed2.showGrossIncome('fixed+conversions')\n",
+    "plan_fixed.showGrossIncome('no conversions')\n",
+    "plan_fixed2.showGrossIncome('conversions')\n",
     "\n",
-    "plan_fixed.showTaxes('fixed')\n",
-    "plan_fixed2.showTaxes('fixed+conversions')"
+    "plan_fixed.showTaxes('no conversion')\n",
+    "plan_fixed2.showTaxes('conversions')"
    ]
   },
   {
@@ -455,19 +458,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_hist.showSources('hist')\n",
-    "plan_hist2.showSources('hist+conversions')\n",
+    "plan_hist.showSources('no conversions')\n",
+    "plan_hist2.showSources('conversions')\n",
     "\n",
-    "plan_hist.showRates('hist')\n",
+    "plan_hist.showRates('')\n",
     "\n",
-    "plan_hist.showAccounts('hist')\n",
-    "plan_hist2.showAccounts('hist+conversions')\n",
+    "plan_hist.showAccounts('no conversion')\n",
+    "plan_hist2.showAccounts('conversions')\n",
     "\n",
-    "plan_hist.showGrossIncome('hist')\n",
-    "plan_hist2.showGrossIncome('hist+conversions')\n",
+    "plan_hist.showGrossIncome('no conversions')\n",
+    "plan_hist2.showGrossIncome('conversions')\n",
     "\n",
-    "plan_hist.showTaxes('hist')\n",
-    "plan_hist2.showTaxes('hist+conversions')"
+    "plan_hist.showTaxes('no conversions')\n",
+    "plan_hist2.showTaxes('conversions')"
    ]
   },
   {
