--- a/template.ipynb
+++ b/template.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan = arp.Plan(YOB=[XXXX, XXXX], expectancy=[XX, XX])"
+    "plan = arp.Plan(YOB=[1970, 1971], expectancy=[84, 83])"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "plan.setAssetBalances(taxable=[90000, 40000], \n",
-    "                      taxDeferred=[500000, 150000],\n",
+    "                      taxDeferred=[1000000, 500000],\n",
     "                      taxFree=[80000, 25000],\n",
     "                      beneficiary=[1, 1])"
    ]
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.readContributions('myfile.xlsx')"
+    "plan.readContributions('template.xlsx')"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDesiredIncome(84000, 'smile')"
+    "plan.setDesiredIncome(40000, 'smile')"
    ]
   },
   {
@@ -513,7 +513,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.run();"
+    "plan.setName('template')\n",
+    "plan.run()"
    ]
   },
   {
@@ -540,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showNetIncome();"
+    "plan.showNetIncome()"
    ]
   },
   {
@@ -559,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showSources();"
+    "plan.showSources()"
    ]
   },
   {
@@ -578,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showAccounts();"
+    "plan.showAccounts()"
    ]
   },
   {
@@ -639,7 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showTaxes();"
+    "plan.showTaxes()"
    ]
   },
   {
@@ -660,7 +661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showGrossIncome();"
+    "plan.showGrossIncome()"
    ]
   },
   {
@@ -679,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showRates();"
+    "plan.showRates()"
    ]
   },
   {
@@ -696,7 +697,7 @@
    "id": "9231c810-31db-45aa-98f1-6632f717d375",
    "metadata": {},
    "source": [
-    "Here, this call will create an excel workbook with one spreadsheet (tab) for Jack and one for Jill."
+    "Here, this call will create an excel workbook with one spreadsheet (tab) for each spouse."
    ]
   },
   {
@@ -706,7 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plan.saveInstance('Jack and Jill', True)"
+    "# plan.saveInstance('template', True)"
    ]
   },
   {
@@ -723,7 +724,7 @@
    "id": "dfe6d2b4-9304-432a-b32c-5053bfdcdea3",
    "metadata": {},
    "source": [
-    "In these simulations, multiple scenarios will be generated and need to be compared. For ranking outcomes, it is instructive to compare the final value of the estate, if any. Given that part of the assets portfolio is taxable, one has to provide an estimate of the income tax rate to be applied to the taxable portion of the final assets. This is done using the `setEstateTaxRate()` method, by which each last year of a scenario will use the same estate tax rate for comparison. The default value is %25. Note that this rate is the marginal tax rate that will be paid by the heirs."
+    "In these simulations, multiple scenarios will be generated and need to be compared. For ranking outcomes, it is instructive to compare the final value of the estate, if any. Given that part of the assets portfolio is taxable, one has to provide an estimate of the income tax rate to be applied to the taxable portion of the final assets. This is done using the `setHeirsTaxRate()` method, by which each last year of a scenario will use the same estate tax rate for comparison. The default value is %25. Note that this rate is the marginal tax rate that will be paid by the heirs."
    ]
   },
   {
@@ -733,7 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setEstateTaxRate(30)"
+    "plan.setHeirsTaxRate(30)"
    ]
   },
   {
@@ -762,7 +763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDesiredIncome(XXXX, 'smile')\n",
+    "plan.setDesiredIncome(50000, 'smile')\n",
     "arp.setVerbose(False)\n",
     "plan.runHistorical(1960, 1988, myplots=['rates', 'net income'])"
    ]
