Simplified the 4% notebook.

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -47,11 +47,11 @@
    "id": "c2939c06-b407-48fb-91d7-560cd96d5206",
    "metadata": {},
    "source": [
-    "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-deferred account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the one which happened in 1966. The market in 1966 is peculiar in the sense that the following 17 years will be with a near-zero rate of return when one is considering inflation. This particular and exceptional sequence of returns makes it a worst-case scenario for testing the robustness of one's retirement plan. \n",
+    "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-deferred account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the one which happened in 1966. The market in 1966 is peculiar in the sense that the following 17 years will be with a near-zero rate of return when one is considering inflation. This particular and exceptional sequence of returns makes it a worst-case scenario for testing the robustness of one's retirement plan. However, it is testing one's scenario with the most challenging set of historical rates, resulting in one planning for the worst case scenario. We would never leave our home if we were to live that way!\n",
     "\n",
-    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenarios used consist of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-deferred account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data.\n",
+    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenarios used consist of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-deferred account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data. Note that the income tax was not considered in the original paper. Neither was social security.\n",
     "\n",
-    "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These initial withdrawals are then adjusted for inflation and no income tax is considered. To avoid triggering the income tax machinery in ARP Lab, we will use an unrealistically small amount of \\\\$2k per year to be withdrawn from a single \\\\$50k tax-deferred account. As this scenario is meant to explore the effects of a percentage, multiplying all the numbers by 20 will convert the results of withdrawing \\\\$40k from a \\\\$1M portfolio. This can obviously be done for any other portfolio balance of interest.\n",
+    "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These initial withdrawals are then adjusted for inflation and no income tax is considered. To avoid triggering the income tax machinery in ARP Lab, we will use an unrealistically small amount of \\\\$2k per year to be withdrawn from a single \\\\$50k tax-deferred account. As this scenario is meant to explore the effects of a percentage, multiplying all the numbers by 20 will convert the results of withdrawing \\\\$40k from a \\\\$1M portfolio. This can obviously be done for any other portfolio balance of interest. Also, we will assume that the money is in a Roth account to avoid triggering the machinery of required minimum distributions.\n",
     "\n",
     "Note that Bengen used data from Ibbotson's SBBI (Stocks, Bonds, Bills, Inflation) Yearbook while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepancies in the number of years that the accounts can sustain due to the slight difference in the rates used. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
    ]
@@ -143,7 +143,7 @@
    "id": "6ea4c5dc-f88d-47c5-a1ec-3474d023bf23",
    "metadata": {},
    "source": [
-    "Sam has \\\\$50k in a single tax-deferred account for a %4 withdrawal. This amount is ridiculously small to avoid triggering income tax. Just multiply all numbers by 20 in your head to get to a \\\\$1M account. "
+    "Sam has \\\\$50k in a single tax-free account for a %4 withdrawal. This amount is ridiculously small to avoid triggering income tax. We also use a Roth account to avoid RMDs. Just multiply all numbers by 20 in your head to get to a \\\\$1M account. "
    ]
   },
   {
@@ -154,8 +154,8 @@
    "outputs": [],
    "source": [
     "plan.setAssetBalances(taxable=[0], \n",
-    "                      taxDeferred=[50000],\n",
-    "                      taxFree=[0],\n",
+    "                      taxDeferred=[0],\n",
+    "                      taxFree=[50000],\n",
     "                      beneficiary=[1])"
    ]
   },
@@ -693,24 +693,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe6d2b4-9304-432a-b32c-5053bfdcdea3",
-   "metadata": {},
-   "source": [
-    "In these simulations, multiple scenarios will be generated and need to be compared. For ranking outcomes, it is instructive to compare the final value of the estate, if any. Given that parts of the assets portfolio are taxable, one has to provide an estimate of the income tax rate to be applied to the taxable portion of the final assets. This is done using the `setHeirsTaxRate()` method, by which an estimated tax rate is applied on the tax-deferred portion of the estate for comparison in the last year of the scenario. The default value is 25%. Note that this rate is the marginal tax rate that will be paid by the heirs, not including possible additional estate taxes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23f70e29-eedb-4c34-8c59-fe6822c458ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan.setHeirsTaxRate(0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0c722518",
    "metadata": {},
    "source": [
@@ -725,7 +707,7 @@
    "id": "3541bc0e-415d-45c7-8727-a1a4c8269afa",
    "metadata": {},
    "source": [
-    "We will run Sam's scenario over many years. Notice the difference in money left at the end of each sequence. Let's increase the desired income by %.05 from %4.00 to %4.05 of the initial savings balance."
+    "Instead of running the scenario for a single year, we will run Sam's scenario over many years. Notice the difference in money left at the end of each sequence. We ask to plot the rates used and the (net) income generated."
    ]
   },
   {
@@ -765,82 +747,6 @@
    "outputs": [],
    "source": [
     "plan.runMonteCarlo(500, 1960, 2022)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c178bf7e-c22f-42d7-8626-4ec6ece9dfe5",
-   "metadata": {},
-   "source": [
-    "## One more notch up for modeling\n",
-    "We can also run Roth conversion estate maximization strategies. Using commutativity of multiplication, one can easily demonstrate that there is no point in doing a Roth conversion if the tax rate to be paid on the conversion now is the same as the one to be paid on the distribution later. However, things are much more complex in reality, and one has to take RMDs in consideration on top of all other unknown factors that can happen, including changes in the tax code. For this purpose, a simple heuristical Roth optimizer maximizes the estate amount left at the passing of the last spouse, considering a tax bracket on the taxable portion of the estate, and under the constraint of receiving a desired income. Function will return a new plan, and an array containing proposed Roth conversions.\n",
-    "\n",
-    "Here is an example of how it works: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "096a73b4-45ea-40dc-81bb-d60bfb6d55b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use time reproducible rates\n",
-    "plan.setRates('average', 1928, 2022)\n",
-    "plan.setDesiredIncome(2000, 'flat')\n",
-    "plan2, conversions = arp.optimizeRoth(plan, 0)\n",
-    "print(conversions)\n",
-    "plan.run();\n",
-    "plan2.run();\n",
-    "plan2.saveInstance('plan2', True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fe7b8361-d87d-4016-8049-a973fb5e1a72",
-   "metadata": {},
-   "source": [
-    "The Excel file named *instance_plan2.xlsx* saved will contain all the information for the heuristically optimized plan. Take a few minutes to open this file and explore the different tabs.\n",
-    "\n",
-    "In this case, Roth conversions should not make any difference as all the income is below the lowest tax bracket on purpose."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d935f374-ccae-4deb-a1d7-e434cdef3917",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan.showNetIncome('original')\n",
-    "plan2.showNetIncome('conversion')\n",
-    "plan.showSources('original')\n",
-    "plan2.showSources('conversion')\n",
-    "plan.showAccounts('original')\n",
-    "plan2.showAccounts('conversion')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2782b1d8-98ab-4b27-8c09-e52ef2382857",
-   "metadata": {},
-   "source": [
-    "### Saving configuration parameters\n",
-    "Configuration parameters set for a run can be saved in a file, thus avoiding to re-enter the same information in the future. This is done using the `savePlan()` and `readPlan()` function calls. Note that 'readPlan()' returns a newly created plan pre-configured according to the parameters set in the configuration file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a5b735d-e4b8-4487-9e6c-bc0cbe17b805",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To save all configuration parameters\n",
-    "arp.savePlan(plan, 'sam')\n",
-    "             \n",
-    "# To create a new plan configured according to the parameters in configuration file.\n",
-    "newplan = arp.readPlan('sam')"
    ]
   },
   {
