--- a/roth.ipynb
+++ b/roth.ipynb
@@ -98,7 +98,7 @@
    "id": "0fb31825-da92-45f8-8b36-ff6abf7b1871",
    "metadata": {},
    "source": [
-    "We start with a couple having a little over \\\\$2M in assets. As is common, one spouse can have significantly more assets than the other. Here, Bonnie enjoyed high wages and generous benefits from her employer, while Clyde had an equally enjoyable but less lucrative career. Let's assume that Clyde and Bonnie are about 5 years from retirement. Bonnie is born in 64, while Clyde is two years younger. Their life expectancy is assumed to be a few years longer than average for their age."
+    "We start with a couple having a little over \\\\$2M in assets. As is common, one spouse can have significantly more assets than the other. Here, Bonnie enjoyed high wages and generous benefits from her employer, while Clyde had an equally enjoyable but less lucrative career. Let's assume that Clyde and Bonnie are about 5 years from retirement. Bonnie is born in 64, while Clyde is two years younger. Their life expectancy is assumed to be a few years longer than average for their age. Le's call this plan *Roth example* for now."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "source": [
     "## Assets balances in each type of savings accounts\n",
-    "Clyde has \\\\$100 k in her taxable savings account, \\\\$2 M in her 401k, and \\\\$120 k in a Roth 401k account. Clyde has \\\\$50 k in is taxable savings account, \\\\$400 k in a 403b, and \\\\$25 k in a Roth IRA. They leave everything to each others, indicated by the full fraction 1.  as beneficiaries. This information is entered using the `setAssetsBalances()` function call."
+    "Clyde has \\\\$100 k in her taxable savings account, \\\\$2 M in her 401k, and \\\\$120 k in a Roth 401k account. Clyde has \\\\$50 k in is taxable savings account, \\\\$400 k in a 403b, and \\\\$25 k in a Roth IRA. They leave everything to each others, indicated by the full fraction 1.  as beneficiaries. This information is entered using the `setAssetsBalances()` function call as follows."
    ]
   },
   {
@@ -303,7 +303,7 @@
    "source": [
     "Let's first run both cases with no conversion. When reporting estate value, we will assume that there marginal income tax rate to be paid by heirs on the tax-deferred portion of the inheritance is 20%.  We will use the variable `heirsTaxRate` to store the 20%, allowing you to change the value at a single place for experimenting with different scenarios.\n",
     "\n",
-    "Note that the estate value is in today's \\\\$."
+    "Note that the estate value is always in today's \\\\$, allowing for comparisons between different future scenarios containing different inflation histories."
    ]
   },
   {
@@ -479,13 +479,13 @@
    "metadata": {},
    "source": [
     "### Brief analysis\n",
-    "Note how the Roth conversions are timed with the spikes in rates of return, reinforcing the practice that making Roth conversion during the downturns of the market is an excellent strategy. Here, the Roth conversions are assumed to be done early in the year, before the annual rate of return is applied. As a results, conversions in the same year as when the market recovers is the best strategy. As we do not know when the market will bounce, we do know when the market goes down, and therefore a strategy of converting any time during a market large dip is good. Drawdown approaches could be investigated, but they would benefit from having daily interest rates. As now implemented, ARP Lab relies on annual rates, but that could be easily changed.\n",
+    "Note how the Roth conversions are timed with the spikes in rates of return, reinforcing the practice that making Roth conversion during the downturns of the market is an excellent strategy. Here, the Roth conversions are assumed to be done early in the year, before the annual rate of return is applied. As a results, conversions in the same year as when the market recovers is the best strategy. While we do not know when the market will bounce, we do know however when the market goes down, and therefore a strategy of converting any time during a market large dip is good. Drawdown approaches could be investigated, but they would benefit from having daily interest rates. As now implemented, ARP Lab relies on annual rates, but that could be easily changed.\n",
     "\n",
     "Another contributing factor to this additional wealth is that when tax-deferred assets are large, the RMDs can have a significant tax impact in the middle-to-late years of retirement. Roth conversion smooths out these income peaks by shifting the tax burden earlier in the retirement and avoiding large RMDs later in life. Moreover, coordinated accounts can maintain a balanced portfolio while shifting high-performance (but riskier) assets to a tax-free account, further reducing the tax burden on the remaining assets.\n",
     "\n",
     "When return rates are constant, the proposed Roth conversions will tend to align with a given tax bracket (dashed lines), following common wisdom. The situation here is a combination of both, as it seems advantageous to break the tax bracket line for generating more return in a tax-free account before a swing of market recovery.\n",
     "\n",
-    "Recall that this simulation is using average annual return rates and not daily rates. This has two consequences. The first one is that a knowledge of daily market values could lead to even more gains. But this is only wishful thinking. Second, this simulation assumes that conversions happen at the beginning of the year. A practical implementation would be to design a drawdown method in which a drop in the market beyond a certain percentage value could trigger a Roth conversion of a certain amount optimized over informed assumptions."
+    "Recall that this simulation is using average annual return rates and not daily rates. This has two consequences. The first one is that a knowledge of daily market values could lead to even more gains. But this is only wishful thinking. Second, this simulation assumes that conversions happen at the beginning of the year. A practical implementation would be to design a drawdown method in which a drop in the market beyond a certain percentage value could trigger a Roth conversion of a certain amount optimized over informed assumptions. This is one more argument for having a dynamic plan for retirement., and be able to react to the market in a rational way."
    ]
   },
   {
@@ -504,7 +504,7 @@
     "I hope this example have convinced you that Roth conversions have complex implications and should be considered for reasons beyond those strictly comparing the current tax rate with possible tax rates of the future. The effects of large RMDs, heirs income tax on estate, and market fluctuations need to be considered.\n",
     "\n",
     "Many more questions can be explored:\n",
-    "- What is the effect of the tax-deferred tax rate assumed? Does a rate of 30% give the same answer as 20%? How about 60%? At what percentage will optimized scenarios have the tax-deferred accounts all be converted by the time that Clyde and Bonnie have passed?\n",
+    "- What is the effect of the tax-deferred heirs tax rate assumed? Does a rate of 30% give the same answer as 20%? How about 60%? At what percentage will optimized scenarios have the tax-deferred accounts all be converted by the time that Clyde and Bonnie have passed?\n",
     "- What is the effect of a *smile* spending profile vs a *flat* spending profile?\n",
     "- What if both spouses have large tax-deferred assets?\n",
     "- What are the benefits of accounts allocations in this case? What if accounts allocations are not coordinated?\n",
